--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
         <div class="container">
             Hello World
         </div>
+        <div class="heroarea">
+            This is hero area.
+        </div>
     </body>
 </html>
