--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
         <title>Hello WOrld</title>
     </head>
     <body>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Contact</li>
+                <li>Login</li>
+                <li>Register</li>
+            </ul>
+        </nav>
         <div class="container">
             Hello World
         </div>
