--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         </nav>
         <div class="container">
             Hello World...........
+            How are you?
         </div>
         <div class="heroarea">
             This is hero area.
